# MHeatmap

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
data/main_experiment/real_world_benchmark/: README.md
docs/: README.md
examples/tabula_sapiens/: tabula_sapiens_v2.py
main_experiment/: README.md
main_experiment/real_world_benchmark/: README.md  _real_world_data.py  make_real_world_quad_figures.py  run_real_world_benchmark.py
main_experiment/synthetic_benchmark/: README.md  _benchmark_utils.py  run_synthetic_evaluation.py  run_synthetic_strong_baselines.py
output/: README.md
output/main_experiment/real_world_benchmark/: real_world_benchmark_paper.csv  real_world_benchmark_paper.md
output/main_experiment/real_world_benchmark/processed_matrices/: acs_clean_original_matrix.csv  cip_soc_original_matrix.csv  gtfs_clean_original_matrix.csv  lodes_clean_original_matrix.csv  naics_sic_original_matrix.csv  openalex_original_matrix.csv  twenty_newsgroups_original_matrix.csv
output/main_experiment/synthetic_benchmark/: synthetic_strong_baselines_paper.csv  synthetic_strong_baselines_paper.md
